--- a/404.html
+++ b/404.html
@@ -70,7 +70,7 @@
       <p class="desctext">
         Go back to the home page by clicking on this link:
       </p>
-      <a href="./">
+      <a href="./index.html">
         Home:
       </a>
     </div>
@@ -178,7 +178,7 @@
 </script>
 
 <div class="navbar" id="myTopnav">
-  <a href="./" class="navcenter">Home</a>
+  <a href="./index.html" class="navcenter">Home</a>
   <a href="./Portfolio/" class="left">Portfolio</a>
   <a href="./About_Me/" class="left">About Me</a>
   <a href="./Blog/" class="left">Blog</a>
