--- a/404.html
+++ b/404.html
@@ -54,8 +54,9 @@
     <div class="content" style="height:200px;">
       <p class="desctext">
         There could be a couple reasons for this:
-        <br>- You could've made a typo
+        <br>- You could've made a typo.
         <br>- The content simply doesn't exist on our website.
+        <br>- A technical issue could have happened.
       </p>
     </div>
   </div>
@@ -64,14 +65,20 @@
 <div class="row">
   <div class="centered">
     <button type="button" class="titlebars">
-      <h2>Go back home:</h2>
+      <h2>What you can do:</h2>
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        Go back to the home page by clicking on this link:
+        You can go back to the home page by clicking on this link:
       </p>
       <a href="./index.html">
         Home:
+      </a>
+      <p class="desctext">
+        Alternatively, you can ask our community or DM me directly for some help and support with your issue!
+      </p>
+      <a href="https://discord.gg/k5mfWReazF">
+        Discord Server:
       </a>
     </div>
   </div>
@@ -178,7 +185,7 @@
 </script>
 
 <div class="navbar" id="myTopnav">
-  <a href="./index.html" class="navcenter">Home</a>
+  <a href="/" class="navcenter">Home</a>
   <a href="./Portfolio/" class="left">Portfolio</a>
   <a href="./About_Me/" class="left">About Me</a>
   <a href="./Blog/" class="left">Blog</a>
