--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@
       <p class="desctext">
         You can go back to the home page by clicking on this link:
       </p>
-      <a href="./index.html">
+      <a href="/">
         Home:
       </a>
       <p class="desctext">
