--- a/About_Me/index.html
+++ b/About_Me/index.html
@@ -120,6 +120,28 @@
     </div>
   </div>
 </div>
+
+<div class="row">
+  <div class="centered">
+    <button type="button" class="titlebars">
+      <h2>Trivia!</h2>
+    </button>
+    <div class="content" style="height:200px;">
+      <p class="desctext">
+        Some basic facts about myself so you can know me better as a human!
+        <br><br>- I play games too often.
+        <br>- Not a big fan of drop towers.
+        <br>- Funny enough, I like rollercoasters. I just don't know why.
+        <br>- I personally don't like the dark.
+        <br>- I'm bad at video games, if it wasn't obvious from my website.
+        <br>- Ironically, the exception is tetr.io, where I hit X rank.
+        <br>- I'm just an average person, and I am not "better than you".
+        <br>- I can't draw. I tried, it didn't work.
+      </p>
+    </div>
+  </div>
+</div>
+
 <div class="filler">
 </div>
 <div class="filler2">
