--- a/index.html
+++ b/index.html
@@ -145,6 +145,17 @@
         This build of our website is currently in development, and may be unstable at times. Please report any bugs to Nexint by using our socials.
       </p>
       <p class="desctext">
+        07/30/2024:
+        <br>+ Canary Added! Linked at the bottom of this description.
+        <br>+ Custom 404 page added.
+        <br>/ Bugfixes, Bugfixes, Bugfixes.
+        <br>/ Apologies for the lack of "updates" here. Spammed all at once.
+        <br>- Small downtime due to history deletion on our Github and Vercel.
+      </p>
+      <a href="./Canary/">
+        Canary Website (If this leads to a 404, be warned.)
+      </a>
+      <p class="desctext">
         07/21/2024:
         <br>/ Minor visual tweaks. Nothing special.
       </p>
