--- a/404.html
+++ b/404.html
@@ -115,12 +115,12 @@
       </div>
       <hr class="footer">
       <div class="textfoot">
-        <a href="./Usage_Terms/">
+        <a href="/Usage_Terms/">
           <p class="first">
             Usage Terms:
           </p>
         </a>
-        <a href="./Legal/">
+        <a href="/Legal/">
           <p class="next">
             Legal:
           </p>
@@ -186,11 +186,11 @@
 
 <div class="navbar" id="myTopnav">
   <a href="/" class="navcenter">Home</a>
-  <a href="./Portfolio/" class="left">Portfolio</a>
-  <a href="./About_Me/" class="left">About Me</a>
-  <a href="./Blog/" class="left">Blog</a>
-  <a href="./Usage_Terms/" class="right">Usage Terms</a>
-  <a href="./Legal/" class="right">Legal</a>
+  <a href="/Portfolio/" class="left">Portfolio</a>
+  <a href="/About_Me/" class="left">About Me</a>
+  <a href="/Blog/" class="left">Blog</a>
+  <a href="/Usage_Terms/" class="right">Usage Terms</a>
+  <a href="/Legal/" class="right">Legal</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
