--- a/About_Me/index.html
+++ b/About_Me/index.html
@@ -104,19 +104,23 @@
       <p class="desctext">
         Our main setup is a fairly decent setup, with a keyboard, mouse, 4K 60FPS monitor, and speakers.
         <br>This PC has these specs:
-        <br>- i7 12700KF (Stock)
-        <br>- RTX 3070 (Stock)
-        <br>- 32gb DDR4 (3200Mhz) (XMP)
-        <br>- 1tb NVME + 1tb SSD + 6tb HDD + 5tb HDD (Combined: 2tb SSD, 11tb HDD)
       </p>
+      <ul class="desctext">
+        <li>i7 12700KF (Stock)</li>
+        <li>RTX 3070 (Stock)</li>
+        <li>32gb DDR4 (3200Mhz) (XMP)</li>
+        <li>1tb NVME + 1tb SSD + 6tb HDD + 5tb HDD (Combined: 2tb SSD, 11tb HDD)</li>
+      </ul>
       <p class="desctext">
         Our alternate setup is generally average, with a laptop keyboard, mouse, 1080p laptop monitor, and a headset.
         <br>This laptop has these specs:
-        <br>- i5 7300HQ (Stock)
-        <br>- GTX 1050 Mobile (Stock)
-        <br>- 12gb DDR4 (2400Mhz)
-        <br>- 256gb NVME + 1tb HDD
       </p>
+      <ul class="desctext">
+        <li>i5 7300HQ (Stock)</li>
+        <li>GTX 1050 Mobile (Stock)</li>
+        <li>12gb DDR4 (2400Mhz Stock)</li>
+        <li>256gb NVME + 1tb HDD</li>
+      </ul>
     </div>
   </div>
 </div>
@@ -129,15 +133,17 @@
     <div class="content" style="height:200px;">
       <p class="desctext">
         Some basic facts about myself so you can know me better as a human!
-        <br><br>- I play games too often.
-        <br>- Not a big fan of drop towers.
-        <br>- Funny enough, I like rollercoasters. I just don't know why.
-        <br>- I personally don't like the dark.
-        <br>- I'm bad at video games, if it wasn't obvious from my website.
-        <br>- Ironically, the exception is tetr.io, where I hit X rank.
-        <br>- I'm just an average person, and I am not "better than you".
-        <br>- I can't draw. I tried, it didn't work.
       </p>
+      <ul class="desctext">
+        <li>I play games too often.
+        <li>Not a big fan of drop towers.
+        <li>Funny enough, I like rollercoasters. I just don't know why.
+        <li>I personally don't like the dark.
+        <li>I'm bad at video games, if it wasn't obvious from my website.
+        <li>Ironically, the exception is tetr.io, where I hit X rank.
+        <li>I'm just an average person, and I am not "better than you".
+        <li>I can't draw. I tried, it didn't work.
+      </ul>
     </div>
   </div>
 </div>
@@ -173,12 +179,12 @@
       </div>
       <hr class="footer">
       <div class="textfoot">
-        <a href="./../Usage_Terms/">
+        <a href="/Usage_Terms/">
           <p class="first">
             Usage Terms:
           </p>
         </a>
-        <a href="./../Legal/">
+        <a href="/Legal/">
           <p class="next">
             Legal:
           </p>
@@ -243,12 +249,12 @@
 </script>
 
 <div class="navbar" id="myTopnav">
-  <a href="./../" class="navcenter">Home</a>
-  <a href="./../Portfolio/" class="left">Portfolio</a>
-  <a href="#" class="activated left">About Me</a>
-  <a href="./../Blog/" class="left">Blog</a>
-  <a href="./../Usage_Terms/" class="right">Usage Terms</a>
-  <a href="./../Legal/" class="right">Legal</a>
+  <a href="/" class="navcenter">Home</a>
+  <a href="/Portfolio/" class="left">Portfolio</a>
+  <a href="/About_Me/" class="activated left">About Me</a>
+  <a href="/Blog/" class="left">Blog</a>
+  <a href="/Usage_Terms/" class="right">Usage Terms</a>
+  <a href="/Legal/" class="right">Legal</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
