--- a/Canary/index.html
+++ b/Canary/index.html
@@ -52,11 +52,11 @@
       <h2>Status:</h2>
     </button>
     <div class="content" style="height:200px;">
-      <p class="desctext">
-        - We have not been censored by anyone as of yet.
-        <br>- If this document disappears, be warned. We may have been censored by a third party.
-        <br>- Last updated 07/30/2024
-      </p>
+      <ul class="desctext">
+        <li>We have not been censored by anyone as of yet.</li>
+        <li>If this document disappears, be warned. We may have been censored by a third party.</li>
+        <li>Last updated 07/30/2024, 1:22 PM UTC</li>
+      </ul>
     </div>
   </div>
 </div>
@@ -92,12 +92,12 @@
       </div>
       <hr class="footer">
       <div class="textfoot">
-        <a href="./../Usage_Terms/">
+        <a href="/Usage_Terms/">
           <p class="first">
             Usage Terms:
           </p>
         </a>
-        <a href="./../Legal/">
+        <a href="/Legal/">
           <p class="next">
             Legal:
           </p>
@@ -162,12 +162,12 @@
 </script>
 
 <div class="navbar" id="myTopnav">
-  <a href="./../" class="navcenter">Home</a>
-  <a href="./../Portfolio/" class="left">Portfolio</a>
-  <a href="./../About_Me/" class="left">About Me</a>
-  <a href="./../Blog" class="left">Blog</a>
-  <a href="./../Usage_Terms/" class="right">Usage Terms</a>
-  <a href="./../Legal/" class="right">Legal</a>
+  <a href="/" class="navcenter">Home</a>
+  <a href="/Portfolio/" class="left">Portfolio</a>
+  <a href="/About_Me/" class="left">About Me</a>
+  <a href="/Blog" class="left">Blog</a>
+  <a href="/Usage_Terms/" class="right">Usage Terms</a>
+  <a href="/Legal/" class="right">Legal</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
