--- a/Legal/index.html
+++ b/Legal/index.html
@@ -131,12 +131,12 @@
       </div>
       <hr class="footer">
       <div class="textfoot">
-        <a href="./../Usage_Terms/">
+        <a href="/Usage_Terms/">
           <p class="first">
             Usage Terms:
           </p>
         </a>
-        <a href="./../Legal/">
+        <a href="/Legal/">
           <p class="next">
             Legal:
           </p>
@@ -201,12 +201,12 @@
 </script>
 
 <div class="navbar" id="myTopnav">
-  <a href="./../" class="navcenter">Home</a>
-  <a href="./../Portfolio/" class="left">Portfolio</a>
-  <a href="./../About_Me/" class="left">About Me</a>
-  <a href="./../Blog/" class="left">Blog</a>
-  <a href="./../Usage_Terms/" class="right">Usage Terms</a>
-  <a href="#" class="activated right">Legal</a>
+  <a href="/" class="navcenter">Home</a>
+  <a href="/Portfolio/" class="left">Portfolio</a>
+  <a href="/About_Me/" class="left">About Me</a>
+  <a href="/Blog/" class="left">Blog</a>
+  <a href="/Usage_Terms/" class="right">Usage Terms</a>
+  <a href="/Legal/" class="activated right">Legal</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
