--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -91,13 +91,13 @@
       <h2>What is allowed</h2>
     </button>
     <div class="content" style="height:200px;">
-      <p class="desctext">
-        - Saving my music onto your computer.
-        <br>- Unlimited listening of my music!
-        <br>- Using my music in a non-commercial way (Credit is appreciated!)
-        <br>- Using my music commercially (Credit is appreciated!)
-        <br>- Unlimited copying and sharing of our music (Credit is appreciated!)
-      </p>
+      <ul class="desctext">
+        <li>Saving my music onto your computer.</li>
+        <li>Unlimited listening of my music!</li>
+        <li>Using my music in a non-commercial way (Credit is appreciated!)</li>
+        <li>Using my music commercially (Credit is appreciated!)</li>
+        <li>Unlimited copying and sharing of our music (Credit is appreciated!)</li>
+      </ul>
     </div>
   </div>
   <div class="main">
@@ -105,13 +105,14 @@
       <h2>What isn't allowed</h2>
     </button>
     <div class="content" style="height:200px;">
-      <p class="desctext">
-        - Any usage that breaks the Christian Bible.
-        <br>- Any usage against the Canadian law.
-        <br>- Any usage against your local law.
-        <br>- Usage of my music for exploitative purposes.
-        <br>Examples include: Pay-to-win games, Scams made to exploit people, Uploading without consent, etc.
-      </p>
+      <ul class="desctext">
+        <li>Any usage that breaks the Christian Bible.</li>
+        <li>Any usage against the Canadian law.</li>
+        <li>Any usage against your local law.</li>
+        <li>Usage of my music for exploitative purposes.</li>
+        <li>Examples include: Pay-to-win games, Scams made to exploit people, Uploading without consent, etc.</li>
+        <li><i>The bible takes priority over the law in this case.</i></li>
+      </ul>
     </div>
   </div>
 </div>
@@ -140,12 +141,12 @@
       <h2>What is allowed</h2>
     </button>
     <div class="content" style="height:200px;">
-      <p class="desctext">
-        - Determined per song
-        <br>- Assuming no terms are listed, you may:
-        <br>- Stream the song unlimited times (on streaming platforms)
-        <br>- Use our music in personal projects (with credit)
-      </p>
+      <ul class="desctext">
+        <li>Determined per song</li>
+        <li>Assuming no terms are listed, you may:</li>
+        <li>Stream the song unlimited times (on streaming platforms)</li>
+        <li>Use our music in personal projects (with credit)</li>
+      </ul>
     </div>
   </div>
   <div class="main">
@@ -153,13 +154,14 @@
       <h2>What isn't allowed</h2>
     </button>
     <div class="content" style="height:200px;">
-      <p class="desctext">
-        - Determined per song
-        <br>- Assuming no terms are listed, you may not:
-        <br>- Pirate our music
-        <br>- Use our music in any commmercial projects
-        <br>- Use our music in any personal / non-commercial projects without credit
-      </p>
+      <ul class="desctext">
+        <li>Determined per song</li>
+        <li>Assuming no terms are listed, you may not:</li>
+        <li>Pirate our music</li>
+        <li>Use our music in any personal / non-commercial projects without credit</li>
+        <li>Use our music in ways against the Bible.</li>
+        <li><i>The bible takes priority over the law in this case.</i></li>
+      </ul>
     </div>
   </div>
 </div>
@@ -190,12 +192,12 @@
       <h2>What is allowed</h2>
     </button>
     <div class="content" style="height:200px;">
-      <p class="desctext">
-        - Downloading of our videos
-        <br>- Using clips of our videos (with credit)
-        <br>- Reuploads of the audio (with credit)
-        <br>- Transformative reuploads of our content
-      </p>
+      <ul class="desctext">
+        <li>Downloading of our videos</li>
+        <li>Using clips of our videos (with credit)</li>
+        <li>Reuploads of the audio (with credit)</li>
+        <li>Transformative reuploads of our content</li>
+      </ul>
     </div>
   </div>
   <div class="main">
@@ -203,15 +205,16 @@
       <h2>What isn't allowed</h2>
     </button>
     <div class="content" style="height:200px;">
-      <p class="desctext">
-        - Using our content without credit
-        <br>- Direct re-uploads of our content (If you do this without credit, we will send a copyright strike.)
-        <br>- Using our content in ways that break the Christian Bible.
-        <br>- Any usage that breaks Canadian Law
-        <br>- Any usage that breaks your local laws
-        <br>- Usage of my music for exploitative purposes
-        <br>Examples include: Pay-to-win games, Scams made to exploit people, Uploading without consent, etc.
-      </p>
+      <ul class="desctext">
+        <li>Using our content without credit</li>
+        <li>Direct re-uploads of our content (If you do this without credit, we will send a copyright strike.)</li>
+        <li>Any usage that breaks the Christian Bible.</li>
+        <li>Any usage against the Canadian law.</li>
+        <li>Any usage against your local law.</li>
+        <li>Usage of my content for exploitative purposes.</li>
+        <li>Examples include: Pay-to-win games, Scams made to exploit people, Uploading without consent, etc.</li>
+        <li><i>The bible takes priority over the law in this case.</i></li>
+      </ul>
     </div>
   </div>
 </div>
@@ -242,12 +245,12 @@
       <h2>What is allowed</h2>
     </button>
     <div class="content" style="height:200px;">
-      <p class="desctext">
-        - Determined per video
-        <br>- Assuming no terms are listed, you may:
-        <br>- Listen to our content (even with an adblocker!)
-        <br>- Use our content under "Fair use policies" in Canada or your local country.
-      </p>
+      <ul class="desctext">
+        <li>Determined per video</li>
+        <li>Assuming no terms are listed, you may:</li>
+        <li>Listen to our content (even with an adblocker!)</li>
+        <li>Use our content under "Fair use policies" in Canada or your local country.</li>
+      </ul>
     </div>
   </div>
   <div class="main">
@@ -255,16 +258,17 @@
       <h2>What isn't allowed</h2>
     </button>
     <div class="content" style="height:200px;">
-      <p class="desctext">
-        - Determined per video
-        <br>- Assuming no terms are listed, these usages aren't allowed:
-        <br>- Usage of our content that does not fall under "Fair use" guidelines in Canada or your local country.
-        <br>- Reuploads of our content (If you do this without credit, we will send a copyright strike.)
-        <br>- Any usage that breaks Canadian Law
-        <br>- Any usage that breaks your local laws
-        <br>- Usage of my music for exploitative purposes
-        <br>Examples include: Pay-to-win games, Scams made to exploit people, Uploading without consent, etc.
-      </p>
+        <ul class="desctext">
+        <li>Determined per video</li>
+        <li>Assuming no terms are listed, these usages aren't allowed:</li>
+        <li>Usage of our content that does not fall under "Fair use" guidelines in Canada or your local country.</li>
+        <li>Any usage against the Christian Bible</li>
+        <li>Reuploads of our content (If you do this without credit, we will send a copyright strike.)</li>
+        <li>Any usage against your local law.</li>
+        <li>Usage of my content for exploitative purposes.</li>
+        <li>Examples include: Pay-to-win games, Scams made to exploit people, Uploading without consent, etc.</li>
+        <li><i>The bible takes priority over the law in this case.</i></li>
+      </ul>
     </div>
   </div>
 </div>
@@ -294,12 +298,12 @@
       <h2>What is allowed</h2>
     </button>
     <div class="content" style="height:200px;">
-      <p class="desctext">
-        - Use of our software in commercial or non commercial environments (Credit is appreciated!)
-        <br>- Unlimited downloading of our software.
-        <br>- Unlimited copying and sharing of our software (Credit is appreciated!)
-        <br>- Note: This only applies to code, not assets that code relies on.
-      </p>
+      <ul class="desctext">
+        <li>Use of our software in commercial or non commercial environments (Credit is appreciated!)</li>
+        <li>Unlimited downloading of our software.</li>
+        <li>Unlimited copying and sharing of our software (Credit is appreciated!)</li>
+        <li>Note: This only applies to code, not assets that code relies on.</li>
+      </ul>
     </div>
   </div>
   <div class="main">
@@ -307,13 +311,13 @@
       <h2>What isn't allowed</h2>
     </button>
     <div class="content" style="height:200px;">
-      <p class="desctext">
-        - Any usage that breaks the Christian Bible.
-        <br>- Any usage against the Canadian law.
-        <br>- Any usage against your local law.
-        <br>- Usage of my software for exploitative purposes.
-        <br>Examples include: Pay-to-win games, Scams made to exploit people, etc.
-      </p>
+      <ul class="desctext">
+        <li>Any usage against the Christian Bible</li>
+        <li>Any usage against your local law.</li>
+        <li>Usage of my software for exploitative purposes.</li>
+        <li>Examples include: Pay-to-win games, Scams made to exploit people, Uploading without consent, etc.</li>
+        <li><i>The bible takes priority over the law in this case.</i></li>
+      </ul>
     </div>
   </div>
 </div>
@@ -419,12 +423,12 @@
 </script>
 
 <div class="navbar" id="myTopnav">
-  <a href="./../" class="navcenter">Home</a>
-  <a href="./../Portfolio/" class="left">Portfolio</a>
-  <a href="./../About_Me/" class="left">About Me</a>
-  <a href="./../Blog/" class="left">Blog</a>
-  <a href="#" class="right activated">Usage Terms</a>
-  <a href="./../Legal/" class="right">Legal</a>
+  <a href="/" class="navcenter">Home</a>
+  <a href="/Portfolio/" class="left">Portfolio</a>
+  <a href="/About_Me/" class="left">About Me</a>
+  <a href="/Blog/" class="left">Blog</a>
+  <a href="/Usage_Terms/" class="right activated">Usage Terms</a>
+  <a href="/Legal/" class="right">Legal</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
