--- a/index.html
+++ b/index.html
@@ -325,9 +325,11 @@
   </div>
 </div>
 <div class="bottom">
-  <p>
-    Remember: Jesus Loves You.
-  </p>
+  <a href="https://www.bible.com/bible/111/1JN.4.7-12.NIV">
+    <p class="first">
+      Remember: Jesus Loves You.
+    </p>
+  </a>
 </div>
 
 <script>
