--- a/Secret/index.html
+++ b/Secret/index.html
@@ -145,9 +145,9 @@
   </div>
 </div>
 <div class="bottom">
-  <p>
+  <a href="https://www.bible.com/bible/114/JHN.15.9-13">
     Remember: Jesus Loves You.
-  </p>
+  </a>
 </div>
 
 <script>
