--- a/index.html
+++ b/index.html
@@ -325,10 +325,8 @@
   </div>
 </div>
 <div class="bottom">
-  <a href="https://www.bible.com/bible/111/1JN.4.7-12.NIV">
-    <p class="first">
-      Remember: Jesus Loves You.
-    </p>
+  <a href="https://www.bible.com/bible/114/JHN.15.9-13">
+    Remember: Jesus Loves You.
   </a>
 </div>
 
