--- a/Canary/index.html
+++ b/Canary/index.html
@@ -140,7 +140,7 @@
 </div>
 <div class="bottom">
   <a href="https://www.bible.com/bible/114/JHN.15.9-13">
-    Remember: Jesus Loves You.
+    <p>Remember: Jesus Loves You.</p>
   </a>
 </div>
 
