--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
       <a href="https://www.youtube.com/@Nexint">
         Nexint YT:
       </a>
+      <a href="https://www.spacelink.cc">
+        SpaceLink (play.spacelink.cc)
+      </a>
       <a href="https://drive.google.com/drive/u/1/folders/1npsQEDj68GOBnddcYsYXqsJmRNNxaWYc">
         Music Download:
       </a>
