--- a/Canary/index.html
+++ b/Canary/index.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class="cover">
-  <div class="textcenter">
+  <div class="textcentered">
     <h1>Canary Status</h1>
   </div>
 </div>
@@ -55,7 +55,7 @@
       <ul class="desctext">
         <li>We have not been censored by anyone as of yet.</li>
         <li>If this document disappears, be warned. We may have been censored by a third party.</li>
-        <li>Last updated 07/30/2024, 1:22 PM UTC</li>
+        <li>Last updated 08/28/2024, 2:27 AM EST</li>
       </ul>
     </div>
   </div>
