--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class="cover">
-  <div class="textcenter">
+  <div class="textcentered">
     <h1>404 Not Found</h1>
   </div>
 </div>
