--- a/Legal/index.html
+++ b/Legal/index.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="cover">
-  <div class="textcenter">
+  <div class="textcentered">
     <h1>Legal Info</h1>
   </div>
 </div>
