--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class="cover">
-  <div class="textcenter">
+  <div class="textcentered">
     <h1>Portfolio!</h1>
   </div>
 </div>
