--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="cover">
-  <div class="textcenter">
+  <div class="textcentered">
     <h1>Usage Terms</h1>
   </div>
 </div>
