--- a/gospel/index.html
+++ b/gospel/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<title>Nexint's Website</title>
+<title>The Gospel</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/styles.css">
@@ -32,7 +32,6 @@
     }
   });
 </script>
-
 <div class="box">
 <div class="bg">
   <div class="bg2">
@@ -42,108 +41,46 @@
 
 <div class="cover">
   <div class="textcentered">
-    <h1>About Me!</h1>
+    <h1>The Christian Gospel</h1>
   </div>
 </div>
 
 <div class="row">
   <div class="centered">
     <button type="button" class="titlebars">
-      <h2>Who am I?</h2>
+      <h2>What is the gospel?</h2>
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        I'm Nexint, a YouTuber, coder, gamer and musician! I currently run a YouTube channel and code some small projects.
+        The Christian Gospel is the good news that Christ brought. To summarize, it's The life of Jesus Christ our Lord and Savior and His ministry.
       </p>
     </div>
   </div>
+</div>
+
+<div class="bumper">
+
 </div>
 
 <div class="row">
   <div class="side">
     <button type="button" class="titlebars">
-      <h2>How I make music</h2>
+      <h2>(Placeholder)</h2>
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        I use FL studio to make my music, which is a powerful music editing program that I paid for,
-        in conjunction with a keyboard and mouse to make this possible.
+        (Placeholder)
       </p>
     </div>
   </div>
   <div class="main">
     <button type="button" class="titlebars">
-      <h2>How I make content</h2>
+      <h2>(Placeholder 2)</h2>
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        I use Davinci resolve in conjunction with OBS to record and edit our videos.
-        I also use sound effects and <i>some</i> music from Pixabay, and make thumbnails using BeFunky.
+        (Placeholder 2)
       </p>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="side">
-    <button type="button" class="titlebars">
-      <h2>How I code</h2>
-    </button>
-    <div class="content" style="height:200px;">
-      <p class="desctext">
-        I use VS Code to code for most real projects, including this website and DDLT (dead).
-        However, on Batch specifically, I prefer using notepad, and on Scratch I use the default editor.
-      </p>
-    </div>
-  </div>
-  <div class="main">
-    <button type="button" class="titlebars">
-      <h2>Setup</h2>
-    </button>
-    <div class="content" style="height:200px;">
-      <p class="desctext">
-        Our main setup is a fairly decent setup, with a keyboard, mouse, 4K 60FPS monitor, and speakers.
-        <br>This PC has these specs:
-      </p>
-      <ul class="desctext">
-        <li>i7 12700KF (Stock)</li>
-        <li>RTX 3070 (Stock)</li>
-        <li>32gb DDR4 (3200Mhz) (XMP)</li>
-        <li>1tb NVME + 1tb SSD + 6tb HDD + 5tb HDD (Combined: 2tb SSD, 11tb HDD)</li>
-      </ul>
-      <p class="desctext">
-        Our alternate setup is generally average, with a laptop keyboard, mouse, 1080p laptop monitor, and a headset.
-        <br>This laptop has these specs:
-      </p>
-      <ul class="desctext">
-        <li>i5 7300HQ (Stock)</li>
-        <li>GTX 1050 Mobile (Stock)</li>
-        <li>12gb DDR4 (2400Mhz Stock)</li>
-        <li>256gb NVME + 1tb HDD</li>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="centered">
-    <button type="button" class="titlebars">
-      <h2>Trivia!</h2>
-    </button>
-    <div class="content" style="height:200px;">
-      <p class="desctext">
-        Some basic facts about myself so you can know me better as a human!
-      </p>
-      <ul class="desctext">
-        <li>I play games too often.
-        <li>Not a big fan of drop towers.
-        <li>Funny enough, I like rollercoasters. I just don't know why.
-        <li>I personally don't like the dark.
-        <li>I'm bad at video games, if it wasn't obvious from my website.
-        <li>Ironically, the exception is tetr.io, where I hit X rank.
-        <li>ur average person:
-        <li>I can't draw. I tried, it didn't work.
-      </ul>
     </div>
   </div>
 </div>
@@ -251,7 +188,7 @@
 <div class="navbar" id="myTopnav">
   <a href="/" class="navcenter">Home</a>
   <a href="/Portfolio/" class="left">Portfolio</a>
-  <a href="/About_Me/" class="activated left">About Me</a>
+  <a href="/About_Me/" class="left">About Me</a>
   <a href="/Blog/" class="left">Blog</a>
   <a href="/Usage_Terms/" class="right">Usage Terms</a>
   <a href="/Legal/" class="right">Legal</a>
@@ -274,5 +211,6 @@
   $('.navbar').fadeIn();
 </script>
 </div>
+
 </body>
 </html>
