Edited. Not complete, lots of placeholders.

--- a/gospel/index.html
+++ b/gospel/index.html
@@ -65,25 +65,94 @@
 <div class="row">
   <div class="side">
     <button type="button" class="titlebars">
-      <h2>(Placeholder)</h2>
+      <h2>Who is Jesus?</h2>
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        (Placeholder)
+        Jesus is fully God, and fully human. Jesus is the second person of the trinity, and was born as a human from Mary.
+        <br>
+        <br>This is not the same as 50% god, and 50% human. To save us of our sins, Christ is 100% human, and 100% god.
       </p>
     </div>
   </div>
   <div class="main">
     <button type="button" class="titlebars">
-      <h2>(Placeholder 2)</h2>
+      <h2>What did Jesus do?</h2>
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        (Placeholder 2)
+        Back in the old testimate, people had to sacrifice animals for each sin they did. Jesus fulfills this by being the ultimate sacrifice, paying for all of our sins as long as we believe in Jesus.
+        <br>
+        <br>Jesus Christ accomplished this by dying on the cross, going to hell, and conquering death and ressurecting 3 days later. He showed himself to Mary, the 12 apostles, and then 500 more people (as accounted in the Gospels).
+        <br>
+        <br>If Jesus hadn't come down, we would all be condemmed to hell for eternity, or we would have to sacrifice an animal every year on the Israel temple, and if we couldn't, our sins wouldn't be forgiven. 
+        However, since Jesus has risen from the dead, all of our sins have been forgiven in Christ.
+        <br>
+        <br>Jesus has done a lot more in his lifetime, like starting his own ministry (now the Christian Church), many many miracles, and a lot more. I implore you to read the 4 gospels for yourself, which are linked below.
       </p>
+      <a href="https://www.bible.com/bible/114/MAT.1.NKJV">
+        Matthew
+      </a>
+      <a href="https://www.bible.com/bible/114/MRK.1.NKJV">
+        Mark
+      </a>
+      <a href="https://www.bible.com/bible/114/LUK.1.NKJV">
+        Luke
+      </a>
+      <a href="https://www.bible.com/bible/114/JHN.1.NKJV">
+        John
+      </a>
     </div>
   </div>
 </div>
+
+<div class="row">
+    <div class="side">
+      <button type="button" class="titlebars">
+        <h2>Why is this so important?</h2>
+      </button>
+      <div class="content" style="height:200px;">
+        <p class="desctext">
+          If we don't believe in Christ, we would be condemmed to hell. Biblically, Christ is the only way to heaven.
+        </p>
+      </div>
+    </div>
+    <div class="main">
+      <button type="button" class="titlebars">
+        <h2>Biblical Sources:</h2>
+      </button>
+      <div class="content" style="height:200px;">
+        <p class="desctext">
+          The 4 Gospels:
+        </p>
+        <a href="https://www.bible.com/bible/114/MAT.1.NKJV">
+            Matthew
+        </a>
+        <a href="https://www.bible.com/bible/114/MRK.1.NKJV">
+          Mark
+        </a>
+        <a href="https://www.bible.com/bible/114/LUK.1.NKJV">
+          Luke
+        </a>
+        <a href="https://www.bible.com/bible/114/JHN.1.NKJV">
+          John
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="centered">
+      <button type="button" class="titlebars">
+        <h2>Why did I make this page?</h2>
+      </button>
+      <div class="content" style="height:200px;">
+        <p class="desctext">
+          I wanted to spread the word of God more effectively with you.
+        </p>
+      </div>
+    </div>
+  </div>
 
 <div class="filler">
 </div>
