--- a/gospel/index.html
+++ b/gospel/index.html
@@ -83,7 +83,7 @@
       <p class="desctext">
         Back in the old testimate, people had to sacrifice animals for each sin they did. Jesus fulfills this by being the ultimate sacrifice, paying for all of our sins as long as we believe in Jesus.
         <br>
-        <br>Jesus Christ accomplished this by dying on the cross, going to hell, and conquering death and ressurecting 3 days later. He showed himself to Mary, the 12 apostles, and then 500 more people (as accounted in the Gospels).
+        <br>Jesus Christ fulfilled this by dying on the cross, going to hell, and conquering death and ressurecting 3 days later. He showed himself to Mary, the 12 apostles, and then 500 more people (as accounted in the Gospels).
         <br>
         <br>If Jesus hadn't come down, we would all be condemmed to hell for eternity, or we would have to sacrifice an animal every year on the Israel temple, and if we couldn't, our sins wouldn't be forgiven. 
         However, since Jesus has risen from the dead, all of our sins have been forgiven in Christ.
@@ -113,7 +113,9 @@
       </button>
       <div class="content" style="height:200px;">
         <p class="desctext">
-          If we don't believe in Christ, we would be condemmed to hell. Biblically, Christ is the only way to heaven.
+          If we don't believe in Christ, we would be condemmed to hell due to our sins (all of our sins condemn each of us to hell, no matter what). The bible says though, Christ is the only way to heaven.
+          <br>
+          <br>I don't want you to go to hell, and neither does God. I give you this message so that you don't go to hell.
         </p>
       </div>
     </div>
@@ -123,10 +125,31 @@
       </button>
       <div class="content" style="height:200px;">
         <p class="desctext">
+          Fact: We are all sinners, and are deserving of hell. To back this up:
+        </p>
+        <a href="https://www.bible.com/bible/114/rom.3.10-11,23">
+          "No one is righteous, no, not one; no one understands; no one seeks for God…for all have sinned and fall short of the glory of God." - Romans 3:10-11, 23 (ESV)
+        </a>
+        <p class="desctext">
+          Fact: Christ is the only way to heaven.
+        </p>
+        <a href="https://www.bible.com/bible/114/rom.6.23">
+          "For the wages of sin is death, but the free gift of God is eternal life in Christ Jesus our Lord." – Romans 6:23 (ESV)
+        </a>
+        <a href="https://www.bible.com/bible/114/jhn.14.6">
+          "Jesus said to him, “I am the way, and the truth, and the life. No one comes to the Father except through me." - John 14:6 (ESV)
+        </a>
+        <p class="desctext">
+          Fact: God doesn't want us to go to hell.
+        </p>
+        <a href="https://www.bible.com/bible/114/jhn.3.16">
+          "For God so loved the world, that he gave his only Son, that whoever believes in him should not perish but have eternal life." - John 3:16 (ESV)
+        </a>
+        <p class="desctext">
           The 4 Gospels:
         </p>
         <a href="https://www.bible.com/bible/114/MAT.1.NKJV">
-            Matthew
+          Matthew
         </a>
         <a href="https://www.bible.com/bible/114/MRK.1.NKJV">
           Mark
