--- a/gospel/index.html
+++ b/gospel/index.html
@@ -50,7 +50,7 @@
     <button type="button" class="titlebars">
       <h2>What is the gospel?</h2>
     </button>
-    <div class="content" style="height:200px;">
+    <div class="content" style="height:250px;">
       <p class="desctext">
         The Christian Gospel is the good news that Christ brought. To summarize, it's The life of Jesus Christ our Lord and Savior and His ministry.
       </p>
@@ -67,7 +67,7 @@
     <button type="button" class="titlebars">
       <h2>Who is Jesus?</h2>
     </button>
-    <div class="content" style="height:200px;">
+    <div class="content" style="height:250px;">
       <p class="desctext">
         Jesus is fully God, and fully human. Jesus is the second person of the trinity, and was born as a human from Mary.
         <br>
@@ -79,7 +79,7 @@
     <button type="button" class="titlebars">
       <h2>What did Jesus do?</h2>
     </button>
-    <div class="content" style="height:200px;">
+    <div class="content" style="height:250px;">
       <p class="desctext">
         Back in the old testimate, people had to sacrifice animals for each sin they did. Jesus fulfills this by being the ultimate sacrifice, paying for all of our sins as long as we believe in Jesus.
         <br>
@@ -88,20 +88,8 @@
         <br>If Jesus hadn't come down, we would all be condemmed to hell for eternity, or we would have to sacrifice an animal every year on the Israel temple, and if we couldn't, our sins wouldn't be forgiven. 
         However, since Jesus has risen from the dead, all of our sins have been forgiven in Christ.
         <br>
-        <br>Jesus has done a lot more in his lifetime, like starting his own ministry (now the Christian Church), many many miracles, and a lot more. I implore you to read the 4 gospels for yourself, which are linked below.
+        <br>Jesus has done a lot more in his lifetime, like starting his own ministry (now the Christian Church), many many miracles, and a lot more. I implore you to read the 4 gospels for yourself, which are linked in our sources.
       </p>
-      <a href="https://www.bible.com/bible/114/MAT.1.NKJV">
-        Matthew
-      </a>
-      <a href="https://www.bible.com/bible/114/MRK.1.NKJV">
-        Mark
-      </a>
-      <a href="https://www.bible.com/bible/114/LUK.1.NKJV">
-        Luke
-      </a>
-      <a href="https://www.bible.com/bible/114/JHN.1.NKJV">
-        John
-      </a>
     </div>
   </div>
 </div>
@@ -111,7 +99,7 @@
       <button type="button" class="titlebars">
         <h2>Why is this so important?</h2>
       </button>
-      <div class="content" style="height:200px;">
+      <div class="content" style="height:250px;">
         <p class="desctext">
           If we don't believe in Christ, we would be condemmed to hell due to our sins (all of our sins condemn each of us to hell, no matter what). The bible says though, Christ is the only way to heaven.
           <br>
@@ -123,7 +111,7 @@
       <button type="button" class="titlebars">
         <h2>Biblical Sources:</h2>
       </button>
-      <div class="content" style="height:200px;">
+      <div class="content" style="height:250px;">
         <p class="desctext">
           Fact: We are all sinners, and are deserving of hell. To back this up:
         </p>
@@ -140,7 +128,7 @@
           "Jesus said to him, “I am the way, and the truth, and the life. No one comes to the Father except through me." - John 14:6 (ESV)
         </a>
         <p class="desctext">
-          Fact: God doesn't want us to go to hell.
+          Fact: God doesn't want us to go to hell. God wants to save each and every one of us.
         </p>
         <a href="https://www.bible.com/bible/114/jhn.3.16">
           "For God so loved the world, that he gave his only Son, that whoever believes in him should not perish but have eternal life." - John 3:16 (ESV)
