--- a/gospel/index.html
+++ b/gospel/index.html
@@ -13,7 +13,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-<script src="/jquery.js"></script>
+<script src="/jquery.js">
+
+</script>
+<script src="/js/copy.js">
+
 </script>
 <script>
   history.scrollRestoration = "manual";
@@ -103,7 +107,7 @@
         <p class="desctext">
           If we don't believe in Christ, we would be condemmed to hell due to our sins (all of our sins condemn each of us to hell, no matter what). The bible says though, Christ is the only way to heaven.
           <br>
-          <br>I don't want you to go to hell, and neither does God. I give you this message so that you don't go to hell.
+          <br>I don't want you to go to hell, and neither does God. I give you this message to help you find the right path in Christ.
         </p>
       </div>
     </div>
@@ -159,8 +163,12 @@
       </button>
       <div class="content" style="height:200px;">
         <p class="desctext">
-          I wanted to spread the word of God more effectively with you.
+          I wanted to spread the word of God more effectively with you, and want to provide an easier method of spreading the Gospel. 
         </p>
+        <input type="text" value="https://nexint.org/gospel" id="myInput">
+        <button onclick="copyTheText()">
+          Copy Shareable Link
+        </button>
       </div>
     </div>
   </div>
