--- a/gospel/index.html
+++ b/gospel/index.html
@@ -165,10 +165,7 @@
         <p class="desctext">
           I wanted to spread the word of God more effectively with you, and want to provide an easier method of spreading the Gospel. 
         </p>
-        <p class="desctext" type="text" value="https://nexint.org/gospel" id="myInput">
-          https://nexint.org/gospel
-        </p>
-        <button onclick="copyTheText()">
+        <button onclick="copyTheText(https://nexint.org/gospel)">
           https://nexint.org/gospel
         </button>
       </div>
