--- a/gospel/index.html
+++ b/gospel/index.html
@@ -165,7 +165,7 @@
         <p class="desctext">
           I wanted to spread the word of God more effectively with you, and want to provide an easier method of spreading the Gospel. 
         </p>
-        <p id="myText">https://nexint.org/gospel</p>
+        <p id="myInput">https://nexint.org/gospel</p>
         <button class="btn" onclick="copyContent()">Copy!</button>
         <button onclick="copyTheText(https://nexint.org/gospel)">
           https://nexint.org/gospel
