--- a/gospel/index.html
+++ b/gospel/index.html
@@ -166,7 +166,7 @@
           I wanted to spread the word of God more effectively with you, and want to provide an easier method of spreading the Gospel. 
         </p>
         <p id="myInput">https://nexint.org/gospel</p>
-        <button class="btn" onclick="copyContent()">Copy!</button>
+        <input type="text" value="https://nexint.org/gospel" id="myInput">
         <button onclick="copyTheText(https://nexint.org/gospel)">
           https://nexint.org/gospel
         </button>
