--- a/gospel/index.html
+++ b/gospel/index.html
@@ -165,9 +165,8 @@
         <p class="desctext">
           I wanted to spread the word of God more effectively with you, and want to provide an easier method of spreading the Gospel. 
         </p>
-        <p id="myInput">https://nexint.org/gospel</p>
         <input type="text" value="https://nexint.org/gospel" id="myInput">
-        <button onclick="copyTheText(https://nexint.org/gospel)">
+        <button onclick="copyTheText("https://nexint.org/gospel")">
           https://nexint.org/gospel
         </button>
       </div>
