ToolTips Added for copyable text!

--- a/gospel/index.html
+++ b/gospel/index.html
@@ -165,7 +165,8 @@
         <p class="desctext">
           I wanted to spread the word of God more effectively with you, and want to provide an easier method of spreading the Gospel. 
         </p>
-        <button onclick="copyTheText()">
+        <button onclick="copyText()" onmouseout="resetCopy()">
+          <span class="tooltiptext" id="copyToClipboard">Copy to clipboard</span>
           <p class="desctext" id="copyable">https://nexint.org/gospel</p>
         </button>
       </div>
