--- a/gospel/index.html
+++ b/gospel/index.html
@@ -36,6 +36,21 @@
     }
   });
 </script>
+<script type="text/javascript">
+function copyTheText() {
+  let Text = document.getElementById('copyable').innerHTML;
+
+  // Copy the text inside the text field
+  navigator.clipboard.writeText(Text.value);
+  
+  let tooltip = document.getElementById("copyToClipboard");
+  tooltip.innerHTML = "Copied: " + Text.value;
+}
+function resetCopy() {
+  let tooltip = document.getElementById("copyToClipboard");
+  tooltip.innerHTML = "Copy to clipboard";
+}
+</script>
 <div class="box">
 <div class="bg">
   <div class="bg2">
@@ -168,7 +183,7 @@
         <div class="tooltip">
           <button onclick="copyText()" onmouseout="resetCopy()">
             <span class="tooltiptext" id="copyToClipboard">Copy to clipboard</span>
-            <p class="desctext" id="copyable">https://nexint.org/gospel</p>
+            <p id="copyable">https://nexint.org/gospel</p>
           </button>
         </div>
       </div>
