--- a/gospel/index.html
+++ b/gospel/index.html
@@ -167,7 +167,7 @@
           I wanted to spread the word of God more effectively with you, and want to provide an easier method of spreading the Gospel. 
         </p>
         <div class="tooltip">
-          <button onclick="copyTheText(https://nexint.org/gospel)" onmouseout="resetCopy()">
+          <button onclick="copyTheText(https\:\/\/nexint.org\/gospel)" onmouseout="resetCopy()">
             <span class="tooltiptext" id="copyToClipboard">Copy to clipboard</span>
             <p>https://nexint.org/gospel</p>
           </button>
