--- a/gospel/index.html
+++ b/gospel/index.html
@@ -166,10 +166,10 @@
         <p class="desctext">
           I wanted to spread the word of God more effectively with you, and want to provide an easier method of spreading the Gospel. 
         </p>
-        <div class="tooltip">
-          <button onclick="copyTheText(https\:\/\/nexint.org\/gospel)" onmouseout="resetCopy()">
+        <div class="tooltip hoverable">
+          <button onclick="copyTheText()" onmouseout="resetCopy()">
             <span class="tooltiptext" id="copyToClipboard">Copy to clipboard</span>
-            <p>https://nexint.org/gospel</p>
+            <p id="copyable">https://nexint.org/gospel</p>
           </button>
         </div>
       </div>
