--- a/gospel/index.html
+++ b/gospel/index.html
@@ -165,11 +165,15 @@
       <div class="content" style="height:200px;">
         <p class="desctext">
           I wanted to spread the word of God more effectively with you, and want to provide an easier method of spreading the Gospel. 
+          <br>
+          <br>Copyable Link:
         </p>
-        <div class="tooltip hoverable">
+        <div class="tooltip">
           <button onclick="copyTheText()" onmouseout="resetCopy()">
             <span class="tooltiptext" id="copyToClipboard">Copy to clipboard</span>
-            <p id="copyable">https://nexint.org/gospel</p>
+            <p id="copyable">
+              https://nexint.org/gospel
+            </p>
           </button>
         </div>
       </div>
