--- a/gospel/index.html
+++ b/gospel/index.html
@@ -168,11 +168,14 @@
           <br>
           <br>Copyable Link:
         </p>
+        <p id="copyable">
+            https://nexint.org/gospel
+          </p>
         <div class="tooltip">
           <button onclick="copyTheText()" onmouseout="resetCopy()">
             <span class="tooltiptext" id="copyToClipboard">Copy to clipboard</span>
             <p id="copyable">
-              https://nexint.org/gospel
+              Copy above link:
             </p>
           </button>
         </div>
