--- a/gospel/index.html
+++ b/gospel/index.html
@@ -166,13 +166,13 @@
         <p class="desctext">
           I wanted to spread the word of God more effectively with you, and want to provide an easier method of spreading the Gospel. 
           <br>
-          <br>Copyable Link:
+          <br>Copyable short-hand to this website:
         </p>
         
         <div class="tooltip">
           <button onclick="copyTheText()" onmouseout="resetCopy()">
             <span class="tooltiptext" id="copyToClipboard">Copy to clipboard</span>
-            <p id="copyable">
+            <p class="buttontext" id="copyable">
               https://nexint.org/gospel
             </p>
           </button>
