--- a/gospel/index.html
+++ b/gospel/index.html
@@ -172,7 +172,7 @@
         <div class="tooltip">
           <button onclick="copyTheText()" onmouseout="resetCopy()">
             <span class="tooltiptext" id="copyToClipboard">Copy to clipboard</span>
-            <p class="buttontext" id="copyable">
+            <p id="copyable">
               https://nexint.org/gospel
             </p>
           </button>
