--- a/gospel/index.html
+++ b/gospel/index.html
@@ -172,9 +172,7 @@
         <div class="tooltip">
           <button onclick="copyTheText()" onmouseout="resetCopy()">
             <span class="tooltiptext" id="copyToClipboard">Copy to clipboard</span>
-            <p class="desctext2" id="copyable">
-              https://nexint.org/gospel
-            </p>
+            <p class="desctext2" id="copyable">https://nexint.org/gospel</p>
           </button>
         </div>
       </div>
