--- a/gospel/index.html
+++ b/gospel/index.html
@@ -195,8 +195,7 @@
       <div class="textfoot">
         <p class="footer">
           All Rights Reserved.
-          <br>I'm a small YouTuber trying to make ​the best content possible.
-          <br><br>Inspired from Kane Ewins's website mockup.
+          <br>This subpage is meant to spread the Christian Gospel.
         </p>
       </div>
     </div>
@@ -210,14 +209,14 @@
       </div>
       <hr class="footer">
       <div class="textfoot">
-        <a href="/Usage_Terms/">
+        <a href="https://www.bible.com/">
           <p class="first">
-            Usage Terms:
+            The Bible I use:
           </p>
         </a>
-        <a href="/Legal/">
+        <a href="https://newcitycatechism.com/new-city-catechism/#1">
           <p class="next">
-            Legal:
+            New City Catechism:
           </p>
         </a>
       </div>
@@ -227,30 +226,21 @@
     <div class="footer3">
       <div class="texthead">
         <p>
-          Socials:
+          Contact Me:
         </p>
       </div>
       <hr class="footer">
       <div class="textfoot">
-        <a href="https://www.youtube.com/@nexint">
-          <p class="first">
-            YouTube:
-          </p>
-        </a>
-        <a href="https://x.com/nexints">
-          <p class="next">
-            Twitter:
-          </p>
-        </a>
-        <a href="https://discord.gg/k5mfWReazF">
-          <p class="next">
-            Discord:
-          </p>
-        </a>
         <a href="mailto:business@nexint.org">
-          <p class="next">
-            E-mail:
+          <p class="first">
+            Main E-Mail:
           </p>
+        </a>
+        <a href="mailto:business@nexint.xyz">
+          <p class="next">
+            Alternative Address:
+          </p>
+        </a>
         </a>
       </div>
     </div>
@@ -278,18 +268,6 @@
     });
   }
 </script>
-
-<div class="navbar" id="myTopnav">
-  <a href="/" class="navcenter">Home</a>
-  <a href="/Portfolio/" class="left">Portfolio</a>
-  <a href="/About_Me/" class="left">About Me</a>
-  <a href="/Blog/" class="left">Blog</a>
-  <a href="/Usage_Terms/" class="right">Usage Terms</a>
-  <a href="/Legal/" class="right">Legal</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div>
 
 <script>
   function myFunction() {
