Legal information, CSS

--- a/gospel/index.html
+++ b/gospel/index.html
@@ -138,6 +138,9 @@
         <a href="https://www.bible.com/bible/114/jhn.3.16">
           "For God so loved the world, that he gave his only Son, that whoever believes in him should not perish but have eternal life." - John 3:16 (ESV)
         </a>
+        <a href="https://www.bible.com/bible/114/JHN.15.9-13">
+          "As the Father has loved me, so have I loved you. Abide in my love. If you keep my commandments, you will abide in my love, just as I have kept my Father’s commandments and abide in his love. These things I have spoken to you, that my joy may be in you, and that your joy may be full. “This is my commandment, that you love one another as I have loved you. Greater love has no one than this, that someone lay down his life for his friends." - John 15:9-13
+        </a>
         <p class="desctext">
           The 4 Gospels:
         </p>
@@ -183,19 +186,20 @@
 </div>
 <div class="filler2">
 </div>
+
 <div class="foot">
   <div class="foot1">
     <div class="footer1">
       <div class="texthead">
         <p>
-          Nexint.org
+          Legal:
         </p>
       </div>
       <hr class="footer">
       <div class="textfoot">
         <p class="footer">
-          All Rights Reserved.
-          <br>This subpage is meant to spread the Christian Gospel.
+          Scripture quotations are from The ESV® Bible (The Holy Bible, English Standard Version®), © 2001 by Crossway, a publishing ministry of Good News Publishers. Used by permission. All rights reserved.
+          <br>This website links out towards other websites, like bible.com.
         </p>
       </div>
     </div>
@@ -217,6 +221,11 @@
         <a href="https://newcitycatechism.com/new-city-catechism/#1">
           <p class="next">
             New City Catechism:
+          </p>
+        </a>
+        <a href="https://www.bible.com/bible/114/JHN.15.9-13">
+          <p class="next">
+            Jesus Loves You:
           </p>
         </a>
       </div>
