Gospel made public

--- a/gospel/index.html
+++ b/gospel/index.html
@@ -192,14 +192,14 @@
     <div class="footer1">
       <div class="texthead">
         <p>
-          Legal:
+          Credits:
         </p>
       </div>
       <hr class="footer">
       <div class="textfoot">
         <p class="footer">
           Scripture quotations are from The ESV® Bible (The Holy Bible, English Standard Version®), © 2001 by Crossway, a publishing ministry of Good News Publishers. Used by permission. All rights reserved.
-          <a href="https://www.freepik.com/free-photo/resurrection-concept-crucifixion-jesus-christ-cross-sunset_3952174.htm#page=4&query=holy%20background&position=4&from_view=keyword&track=ais_hybrid&uuid=3aa6f713-4d43-41e2-ad53-e7219f456981">Image by jcomp</a> on Freepik
+          <br><a href="https://www.freepik.com/free-photo/resurrection-concept-crucifixion-jesus-christ-cross-sunset_3952174.htm#page=4&query=holy%20background&position=4&from_view=keyword&track=ais_hybrid&uuid=3aa6f713-4d43-41e2-ad53-e7219f456981">Image by jcomp</a> on Freepik
         </p>
       </div>
     </div>
