--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
   </div>
 </div>
 <div class="bottom">
-  <a href="https://www.bible.com/bible/114/JHN.15.9-13">
+  <a href="https://nexint.org/gospel">
     <p>Remember: Jesus Loves You.</p>
   </a>
 </div>
