FINAL: Pushed Website Update

--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
         This build of our website is currently in development, and may be unstable at times. Please report any bugs to Nexint by using our socials.
       </p>
       <p class="desctext">
+        09/02/2024:
+        <br>+ Christian Gospel added!
+        <br>+ Copy on click added!
+        <br>/ Bugfixes, Bugfixes, Bugfixes.
+        <br>/ Let me know if there are any biblical inaccuracies or things that have to be added!
+      </p>
+      <p class="desctext">
         07/30/2024:
         <br>+ Canary Added! Linked at the bottom of this description.
         <br>+ Custom 404 page added.
