--- a/gospel/index.html
+++ b/gospel/index.html
@@ -58,6 +58,9 @@
     <div class="content" style="height:250px;">
       <p class="desctext">
         The Christian Gospel is the good news that Christ brought. To summarize, it's The life of Jesus Christ our Lord and Savior and His ministry.
+        <br>
+        <br><i>This resource does not intend to replace the Bible, nor does it intend to add onto the bible. I suggest using one of the
+        mainline bibles that have been known as trustworthy (ESV, NKJV, etc).</i>
       </p>
     </div>
   </div>
@@ -109,6 +112,8 @@
           If we don't believe in Christ, we would be condemmed to hell due to our sins (all of our sins condemn each of us to hell, no matter what). The bible says though, Christ is the only way to heaven.
           <br>
           <br>I don't want you to go to hell, and neither does God. I give you this message to help you find the right path in Christ.
+          <br>
+          <br>Very important! Faith without works is dead. Proclaiming to be Christian, without acting in a Christian way is not being Christian.
         </p>
       </div>
     </div>
@@ -133,13 +138,19 @@
           "Jesus said to him, “I am the way, and the truth, and the life. No one comes to the Father except through me." - John 14:6 (ESV)
         </a>
         <p class="desctext">
-          Fact: God doesn't want us to go to hell. God wants to save each and every one of us.
+          Fact: God doesn't want us to go to hell. God wants to save each and every one of us <b>(by faith alone)</b>.
         </p>
         <a href="https://www.bible.com/bible/114/jhn.3.16">
           "For God so loved the world, that he gave his only Son, that whoever believes in him should not perish but have eternal life." - John 3:16 (ESV)
         </a>
         <a href="https://www.bible.com/bible/114/JHN.15.9-13">
           "As the Father has loved me, so have I loved you. Abide in my love. If you keep my commandments, you will abide in my love, just as I have kept my Father’s commandments and abide in his love. These things I have spoken to you, that my joy may be in you, and that your joy may be full. “This is my commandment, that you love one another as I have loved you. Greater love has no one than this, that someone lay down his life for his friends." - John 15:9-13
+        </a>
+        <p class="desctext">
+          Fact: Faith without works is dead. This is important.
+        </p>
+        <a href="https://www.bible.com/bible/114/jas.2.14-17">
+          "What good is it, my brothers, if someone says he has faith but does not have works? Can that faith save him? If a brother or sister is poorly clothed and lacking in daily food, and one of you says to them, “Go in peace, be warmed and filled,” without giving them the things needed for the body, what good is that? So also faith by itself, if it does not have works, is dead." - James 2:14-17
         </a>
         <p class="desctext">
           The 4 Gospels:
