Open Source TOS

--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -72,6 +72,62 @@
 <div class="row">
   <div class="centered">
     <button type="button" class="titlebars">
+      <h2>Open source:</h2>
+    </button>
+    <div class="content" style="height:200px;">
+      <p class="desctext">
+        These terms of service focus on our open source art, music, etc!
+        <br>Open source music, art and videos is defined as the entire creation process (the FLP or PSD file) being public.
+        <br>Subject to change.
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="side">
+    <button type="button" class="titlebars">
+      <h2>What is allowed</h2>
+    </button>
+    <div class="content" style="height:200px;">
+      <p class="desctext">
+        <i>Note: Open source generally means that you can use it for almost any purpose, without credit. Credit is always appreciated though!</i>
+      </p>
+      <ul class="desctext">
+        <li>All: Taking inspiration on anything.</li>
+        <li>Art: Tracing (with credit)</li>
+        <li>Art: Changing colors, lines, etc</li>
+        <li>Art: Taking the line art to draw something new</li>
+        <li>Music: Changing anything with the songs</li>
+        <li>Music: Adding vocals, etc</li>
+        <li>Videos: Taking my editing style and changing clips.</li>
+      </ul>
+    </div>
+  </div>
+  <div class="main">
+    <button type="button" class="titlebars">
+      <h2>What isn't allowed</h2>
+    </button>
+    <div class="content" style="height:200px;">
+      <ul class="desctext">
+        <li>Any usage that breaks the Christian Bible.</li>
+        <li>Any usage against the Canadian law.</li>
+        <li>Any usage against your local law.</li>
+        <li>Usage of my music for exploitative purposes.</li>
+        <li>Examples include: Pay-to-win games, Scams made to exploit people, Uploading without consent, etc.</li>
+        <li><i>The bible takes priority over the law in this case.</i></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="bumper">
+
+</div>
+
+<div class="row">
+  <div class="centered">
+    <button type="button" class="titlebars">
       <h2>Solo Music Guidelines:</h2>
     </button>
     <div class="content" style="height:200px;">
