--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        This build of our website is currently in development, and may be unstable at times. Please report any bugs to Nexint by using our socials.
+        09/02/2024:
+        <br>/ Modified where the gospel goes to.
+        <br>/ Changed the TOS to include open source music and art.
+        <br>/ Making art!
+        <br>/ Bugfixes, Bugfixes, Bugfixes.
       </p>
       <p class="desctext">
         09/02/2024:
@@ -335,7 +339,7 @@
   </div>
 </div>
 <div class="bottom">
-  <a href="https://nexint.org/gospel">
+  <a href="https://the-gospel.xyz/">
     <p>Remember: Jesus Loves You.</p>
   </a>
 </div>
