--- a/gospel/index.html
+++ b/gospel/index.html
@@ -180,6 +180,8 @@
         <p class="desctext">
           I wanted to spread the word of God more effectively with you, and want to provide an easier method of spreading the Gospel. 
           <br>
+          <br>This website is now outdated! Please go to <a>https://the-gospel.xyz/</a>
+          <br>
           <br>Copyable short-hand to this website:
         </p>
         
