--- a/gospel/index.html
+++ b/gospel/index.html
@@ -180,11 +180,14 @@
         <p class="desctext">
           I wanted to spread the word of God more effectively with you, and want to provide an easier method of spreading the Gospel. 
           <br>
-          <br>This website is now outdated! Please go to <a>https://the-gospel.xyz/</a>
-          <br>
-          <br>Copyable short-hand to this website:
+          <br>This website is now outdated!
         </p>
-        
+        <a href="https://the-gospel.xyz/">
+          Use this link instead.
+        </a>
+        <p class="desctext">
+          Copyable short-hand to this website:
+        </p>
         <div class="tooltip">
           <button onclick="copyTheText()" onmouseout="resetCopy()">
             <span class="tooltiptext" id="copyToClipboard">Copy to clipboard</span>
